# SleepTrackerApp

./: .gitignore  LICENSE  README.md  apitest.rest  package-lock.json  package.json  pyproject.toml  server.js  sleepAdviceEngine.js
client/: .gitignore  package-lock.json  package.json
client/src/: App.css  App.js  Main.java  SleepList.js  axiosInstance.js  index.js
client/src/components/: Dashboard.css  Dashboard.js  LogIn.css  LogIn.js  Logout.js  SignUp.css  SignUp.js  SleepChart.js  SleepEntryForm.css  SleepEntryForm.js
client/src/components/account/: LogIn.css  LogIn.js  Logout.js  SignUp.css  SignUp.js
client/src/components/auth/: RequireAuth.js
client/src/components/layout/: AppShell.js
client/src/components/sleep/: Dashboard.css  Dashboard.js  SleepAdvice.css  SleepAdvice.js  SleepChart.js  SleepEntryForm.css  SleepEntryForm.js  SleepList.js
client/src/constants/: api.js
client/src/context/: SleepContext.js
client/src/routes/: AppRoutes.js
client/src/utils/: authHeaders.js
mongodb-data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-1358701755596841148.wt  collection-2-1358701755596841148.wt  index-1-1358701755596841148.wt  index-3-1358701755596841148.wt  sizeStorer.wt
mongodb-data/diagnostic.data/: metrics.2025-01-13T07-44-47Z-00000  metrics.2025-01-13T08-01-59Z-00000  metrics.2025-01-13T08-05-18Z-00000  metrics.interim
